Map chagnes and create event, search event changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
         <item>Administration</item>
     </string-array>
     <string name="title_activity_maps_test">Map</string>
+    <string name="str_atv_places">Event Location</string>
 
     <string-array name="sections">
         <item >Cricket Tournament</item>
